clang/test/Misc/target-invalid-cpu-note/wasm.c
// This test uses '<prefix>-SAME: {{^}}' to start matching immediately where the
// previous check finished matching (specifically, caret is not treated as
// matching a start of line when used like this in FileCheck).

// RUN: not %clang_cc1 -triple wasm64--- -target-cpu not-a-cpu -fsyntax-only %s 2>&1 | FileCheck %s
// CHECK: error: unknown target CPU 'not-a-cpu'
// CHECK-NEXT: note: valid target CPU values are:
// CHECK-SAME: {{^}} mvp
// CHECK-SAME: {{^}}, bleeding-edge
// CHECK-SAME: {{^}}, generic
// CHECK-SAME: {{$}}
